--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,12 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Caprasimo&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;700&display=swap");
-
 html,
 body {
   margin: 0;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  min-width: 400px;
+  overflow: auto;
   color: #4a494ed5;
   font-family: "Nunito Sans";
+  background-repeat: no-repeat;
   background-image: linear-gradient(
     to bottom left,
     #878abe 40%,
