--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,6 +11,8 @@
   --main-font: "Nunito Sans";
 
   --default-shadow: 0px 10px 50px rgba(0, 0, 0, 0.25);
+  --button-shadow: 0px 4px 1px rgba(0, 0, 0, 0.25);
+  --clicked-shadow: inset 0px 4px 1px rgba(0, 0, 0, 0.25);
 }
 
 html,
