[FE] FEAT: Comment 인터페이스 추가

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -24,6 +24,7 @@ body {
   font-size: 12px;
   color: var(--grey);
   font-family: var(--main-font);
+  text-align: justify;
   background-image: linear-gradient(
     to bottom left,
     #878abe6f 40%,
