[FE] FEAT: ReportModal 추가

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,10 +3,12 @@
   --white: #ffffff;
   --grey: #4a494ed5;
   --lightgrey: #929292;
-  --transparent: #fdfdfd39;
   --purple: #878abe;
   --lightpurple: #dbdcfe;
   --pink: #d1c1cd;
+  --red: #ff4f4f;
+  --transparent: #fdfdfd39;
+  --placeholder: #80808062;
 
   --main-font: "Nunito Sans";
 
