--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700;900&display=swap");
+
 :root {
   --black: #000000;
   --white: #ffffff;
@@ -6,27 +8,28 @@
   --purple: #878abe;
   --lightpurple: #dbdcfe;
   --pink: #d1c1cd;
+  --lightpink: #e6dade;
   --red: #ff4f4f;
   --transparent: #fdfdfd39;
   --placeholder: #80808062;
-
-  --main-font: "Nunito Sans";
 
   --default-shadow: 0px 10px 50px rgba(0, 0, 0, 0.25);
   --button-shadow: 0px 4px 1px rgba(0, 0, 0, 0.25);
   --modal-shadow: 0px 5px 50px 1px rgba(255, 255, 255, 0.147);
   --clicked-shadow: inset 0px 4px 1px rgba(0, 0, 0, 0.25);
+
+  --mobile-max: 767px;
+  --tablet-max: 1023px;
 }
 
 html,
 body {
   margin: 0;
   height: 100%;
-  min-width: 400px;
   overflow: auto;
   font-size: 12px;
   color: var(--grey);
-  font-family: var(--main-font);
+  font-family: "Noto Sans KR", sans-serif;
   text-align: justify;
   background-image: linear-gradient(
     to bottom left,
