--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,6 +12,8 @@
   --red: #ff4f4f;
   --transparent: #fdfdfd39;
   --placeholder: #80808062;
+  --button-grey: #afb0d6;
+  --button-grey-hover: #b7b8d7;
 
   --default-shadow: 0px 10px 50px rgba(0, 0, 0, 0.25);
   --button-shadow: 0px 4px 1px rgba(0, 0, 0, 0.25);
@@ -27,15 +29,19 @@ body {
   margin: 0;
   height: 100%;
   overflow: auto;
-  font-size: 12px;
+  font-size: 10px;
   color: var(--grey);
   font-family: "Noto Sans KR", sans-serif;
   text-align: justify;
-  background-image: linear-gradient(
-    to bottom left,
-    #878abe6f 40%,
-    #d1c1cd,
-    #e6dade
+  background: linear-gradient(
+    227deg,
+    #878abe 36%,
+    #d1c1cd 68.34%,
+    #e6dade 76.75%
   );
   background-repeat: no-repeat;
+}
+
+body::-webkit-scrollbar {
+  display: none; /* 크롬, 사파리, 오페라, 엣지 */
 }
