refactor: [FE] REFACTOR: 배경색 조정

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -36,8 +36,8 @@ body {
   font-family: "Noto Sans KR", sans-serif;
   text-align: justify;
   background: linear-gradient(
-    227deg,
-    #878abe 36%,
+    210deg,
+    #878abea0 30%,
     #d1c1cd 68.34%,
     #e6dade 76.75%
   );
