[FE] FEAT: 언어 설정 추가. languageModal 추가 및 sign-up page 대기 토스트 메시지 추가

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -44,7 +44,7 @@ body {
   background-repeat: no-repeat;
 }
 
-body::-webkit-scrollbar {
+*::-webkit-scrollbar {
   display: none; /* 크롬, 사파리, 오페라, 엣지 */
 }
 button {
