[FE] FEAT: SettingButton 추가 및 기타 반응형 수정

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -42,6 +42,9 @@ body {
     #e6dade 76.75%
   );
   background-repeat: no-repeat;
+  @media (max-width: 1023px) {
+    overflow: hidden;
+  }
 }
 
 *::-webkit-scrollbar {
