feat: [FE] FEAT: 내 프로필 화면 프레임 짜기 + 게시물 탭 버튼 구현

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,7 +6,9 @@
   --black: #000000;
   --white: #ffffff;
   --grey: #4a494ed5;
+  --grey2: #676767;
   --lightgrey: #929292;
+  --lightgrey2: #d1cdcd;
   --purple: #878abe;
   --lightpurple: #dbdcfe;
   --pink: #d1c1cd;
