[FE] FEAT: Tanstack query 추가 및 profileCardModal 업데이트 및 useFetchBoard 추가

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,6 +13,7 @@
   --lightpink: #e6dade;
   --red: #ff4f4f;
   --transparent: #fdfdfd39;
+  --transparent2: #fdfdfd84;
   --placeholder: #80808062;
   --button-grey: #afb0d6;
   --button-grey-hover: #b7b8d7;
