--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -33,6 +33,7 @@ html,
 body {
   margin: 0;
   min-width: 262px;
+  height: calc(var(--vh, 1vh) * 100);
   overflow: hidden;
   font-size: 10px;
   font-weight: 500;
