[FE] FEAT: 모바일 뷰 RightSection 위로 올라오는 애니메이션 추가

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -63,6 +63,11 @@ h1 {
   cursor: default;
 }
 
+::selection {
+  color: white;
+  background: #878abea0;
+}
+
 .swiper-pagination-bullet-active {
   color: white;
   background: var(--white, var(--transparent2));
